# Diiudicatio

./: .env  Cargo.toml  README.md  build.rs  docker-compose.yml
doc/: vote.md
frontend/: package-lock.json  package.json  svelte.config.js  vite.config.ts
frontend/src/: app.html
frontend/src/routes/: +page.svelte
migrations/: 20240324153635_init.sql
src/: lib.rs  main.rs  vote.rs
