[package]
name = "diiudicatio"
version = "0.0.0-wip"
edition = "2021"
repository = "https://github.com/d120dev/Diiudicatio"
license = "EUPL-1.2"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.5.1"
env_logger = "0.11.3"
log = "0.4.21"
