[package]
name = "diiudicatio"
version = "0.0.0-wip"
edition = "2021"
repository = "https://github.com/d120dev/Diiudicatio"
license = "EUPL-1.2"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.5.1"
chrono = "0.4.35"
dotenv = "0.15.0"
env_logger = "0.11.3"
log = "0.4.21"
sqlx = { version = "0.7.4", features = ["runtime-tokio", "postgres", "macros", "migrate", "uuid", "chrono", "time", "json"] }
uuid = "1.8.0"
