[package]
name = "diiudicatio"
version = "0.0.0-wip"
edition = "2021"
repository = "https://github.com/d120dev/Diiudicatio"
license = "EUPL-1.2"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.7.0"
actix-web = "4.5.1"
chrono = {version="0.4.35", features=["serde"]}
dotenv = "0.15.0"
env_logger = "0.11.3"
log = "0.4.21"
serde = "1.0.202"
sqlx = { version = "0.7.4", features = ["runtime-tokio", "postgres", "macros", "migrate", "uuid", "chrono", "time", "json"] }
uuid = { version = "1.8.0", features=["serde"]}
